fEAT: generate questions endpoint added

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,23 @@ SCHEMA_REGISTRY_API_KEY=
 SCHEMA_REGISTRY_API_SECRET=
 KAFKA_API_KEY=
 KAFKA_API_SECRET=
+
+# Vertex AI Gemini Configuration
+GCP_REGION=us-central1
+GCP_PROJECT_ID=edupulse-483220
+GEMINI_MODEL=gemini-2.5-flash
+
+# Vertex AI Credentials (choose ONE of the following options):
+#
+# Option 1: Use gcloud Application Default Credentials (RECOMMENDED for local dev)
+#   Run: gcloud auth application-default login
+#   Leave VERTEX_AI_CREDENTIALS_URI empty or comment it out
+# VERTEX_AI_CREDENTIALS_URI=
+#
+# Option 2: Use a service account key file
+#   Download a service account key from GCP Console
+#   Set the path to your credentials file:
+# VERTEX_AI_CREDENTIALS_URI=file:${HOME}/.gcp/vertex-ai-credentials.json
+#
+# Option 3: Use GOOGLE_APPLICATION_CREDENTIALS environment variable (alternative)
+# GOOGLE_APPLICATION_CREDENTIALS=${HOME}/.gcp/vertex-ai-credentials.json
