create frontend specific endpoints: - create topics, list topics, create student, get student by name - Updating mappings

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,5 @@ GEMINI_MODEL=gemini-2.5-flash
 #
 # Option 3: Use GOOGLE_APPLICATION_CREDENTIALS environment variable (alternative)
 # GOOGLE_APPLICATION_CREDENTIALS=${HOME}/.gcp/vertex-ai-credentials.json
+
+JWT_SECRET=
