--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,21 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-ai.version>1.1.1</spring-ai.version>
-	</properties>
+        <docker.registry>us-central1-docker.pkg.dev</docker.registry>
+        <docker.project>edupulse-483220</docker.project>
+        <docker.repository>edupulse</docker.repository>
+        <image.name>${docker.registry}/${docker.project}/${docker.repository}/${project.artifactId}:${project.version}</image.name>
+    </properties>
 	<dependencies>
         <dependency>
             <groupId>xyz.catuns.edupulse</groupId>
             <artifactId>edupulse-common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.catuns.spring</groupId>
+            <artifactId>jwt-spring-boot-starter</artifactId>
+            <version>1.0.3-SNAPSHOT</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -97,6 +106,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>${image.name}</name>
+                        <builder>paketobuildpacks/builder-jammy-base:latest</builder>
+                        <env>
+                            <BP_JVM_VERSION>21</BP_JVM_VERSION>
+                        </env>
+                        <publish>false</publish>
+                    </image>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -104,6 +123,11 @@
 		<repository>
 			<id>base-starter</id>
 			<name>base-starter</name>
+			<url>https://maven.pkg.github.com/catuns-spring-boot/spring-boot-base</url>
+		</repository>
+		<repository>
+			<id>jwt-starter</id>
+			<name>jwt-starter</name>
 			<url>https://maven.pkg.github.com/catuns-spring-boot/spring-boot-base</url>
 		</repository>
 	</repositories>
