--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     defer-datasource-initialization: true
   sql:
     init:
@@ -13,3 +13,9 @@ logging:
       catuns:
         edupulse:
           quiz: debug
+server:
+  port: 8081
+
+jwt:
+  security:
+    public-paths: /**
