configure redis memory store for production

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ GEMINI_MODEL=gemini-2.5-flash
 # GOOGLE_APPLICATION_CREDENTIALS=${HOME}/.gcp/vertex-ai-credentials.json
 
 JWT_SECRET=
+
+# Redis Configuration (for caching)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_SSL_ENABLED=false
