--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -8,6 +8,23 @@ spring:
       hibernate:
         format_sql: false
         show_sql: false
+  # Redis Memorystore configuration for production
+  data:
+    redis:
+      host: ${REDIS_HOST:}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:}
+      ssl:
+        enabled: ${REDIS_SSL_ENABLED:true}
+      timeout: 2000ms
+      connect-timeout: 2000ms
+  cache:
+    type: redis
+    redis:
+      time-to-live: 3600000
+      cache-null-values: false
+      key-prefix: "quiz:"
+      use-key-prefix: true
 server:
   port: 8080
 logging:
@@ -17,6 +34,10 @@ logging:
       catuns:
         edupulse:
           quiz: info
+    # Reduce Redis connection logging in production
+    io:
+      lettuce:
+        core: warn
 management:
   endpoint:
     health:
